[tool.poetry]
name = "polarfox42_brain_games"
version = "0.1.0"
description = "My first Hexlet project on Python3"
authors = ["polarfox42 <vg.mkrtchyan@gmail.com>"]
packages = [
    { include = "brain_games" },
  ]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
  brain-games = "brain_games.scripts.brain_games:main"
